[tool.poetry]
name = "skyblockpy"
version = "v2024.407.0"
description = "A simple Python API wrapper for the Hypixel Skyblock API."
authors = ["snipe <72265661+notsniped@users.noreply.github.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
